# api/oas-doc.yaml
@@ -1,14 +1,13 @@
 openapi: 3.0.0
 info:
   version: 1.0.0
-  title: Review list
+  title: Review API
   description: >-
-    This is an OpenAPI Specification created by oas-wizard
-    (https://github.com/pafmon/oas-wizard)  
+    This is an OpenAPI Specification for Fafago Reviews API 
   contact:
-    name: PabloFM
-    email: pablofm@us.es
-    url: 'http://www.isa.us.es'
+    name: Review API for Fafago Service
+    email: fafago@gmail.com
+    url: 'https://github.com/fafagorg/reviews'
   license:
     name: MIT
     url: 'http://opensource.org/licenses/MIT'
@@ -18,6 +17,8 @@ paths:
     get:
       description: Returns all questions
       operationId: getQuestions
+      tags:
+        - Questions
       responses:
         '200':
           description: Question List
@@ -36,6 +37,8 @@ paths:
     post:
       description: Creates a new question
       operationId: addQuestion
+      tags:
+        - Questions
       responses:
         '201':
           description: Question created
@@ -58,6 +61,8 @@ paths:
     get:
       description: Returns a question by id
       operationId: findQuestionByid
+      tags:
+        - Questions
       parameters:
         - name: id
           in: path
@@ -81,6 +86,8 @@ paths:
     delete:
       description: Deletes a single question based on the id
       operationId: deleteQuestion
+      tags:
+        - Questions
       parameters:
         - name: id
           in: path
@@ -100,6 +107,8 @@ paths:
     put:
       description: Update a question based on its id
       operationId: updateQuestion
+      tags:
+        - Questions
       parameters:
         - name: id
           in: path
@@ -124,11 +133,172 @@ paths:
               $ref: '#/components/schemas/question'
         description: Question to be updated
         required: true
+  '/api/v1/question/{id}/replies':
+    x-swagger-router-controller: questionController
+    get:
+      description: Returns all the replies of the question with the given id
+      operationId: findQuestionRepliesById
+      tags:
+        - Questions
+      parameters:
+        - name: id
+          in: path
+          description: id of question to fetch replies
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Replies returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/replyResponse'
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
+    post:
+      description: Creates a new reply for the given question
+      operationId: addReplyToQuestion
+      tags:
+        - Questions
+      parameters:
+        - name: id
+          in: path
+          description: id of question to add the reply
+          required: true
+          schema:
+            type: string
+      responses:
+        '201':
+          description: Reply added
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
+      requestBody:
+        x-name: reply
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/reply'
+        description: Reply to be added
+        required: true
+  '/api/v1/question/{questionId}/reply/{replyId}':
+    x-swagger-router-controller: questionController
+    get:
+      description: Returns the reply with the given id in the given question
+      operationId: findQuestionSingleReply
+      tags:
+        - Questions
+      parameters:
+        - name: questionId
+          in: path
+          description: id of the question
+          required: true
+          schema:
+            type: string
+        - name: replyId
+          in: path
+          description: id of the reply
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Reply returned
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/replyResponse'
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
+    delete:
+      description: Deletes the given reply from the given question
+      operationId: deleteReplyFromQuestion
+      tags:
+        - Questions
+      parameters:
+        - name: questionId
+          in: path
+          description: Id of the question
+          required: true
+          schema:
+            type: string
+        - name: replyId
+          in: path
+          description: Id of the reply
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Reply deleted
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
+    put:
+      description: Updates the reply with the given id from the given question
+      operationId: updateReplyFromQuestion
+      tags:
+        - Questions
+      parameters:
+        - name: questionId
+          in: path
+          description: Id of the question
+          required: true
+          schema:
+            type: string
+        - name: replyId
+          in: path
+          description: Id of the reply
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Reply updated
+        '404':
+          description: Reply not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
+      requestBody:
+        x-name: reply
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/reply'
+        description: Reply to be updated
+        required: true
   /api/v1/reviews:
     x-swagger-router-controller: reviewController
     get:
       description: Returns all reviews
       operationId: getReviews
+      tags:
+        - Reviews
       responses:
         '200':
           description: Review List
@@ -147,6 +317,8 @@ paths:
     post:
       description: Creates a new review
       operationId: addReview
+      tags:
+        - Reviews
       responses:
         '201':
           description: Review created
@@ -169,6 +341,8 @@ paths:
     get:
       description: Returns a review by id
       operationId: findReviewByid
+      tags:
+        - Reviews
       parameters:
         - name: id
           in: path
@@ -192,6 +366,8 @@ paths:
     delete:
       description: deletes a single review based on the id
       operationId: deleteReview
+      tags:
+        - Reviews
       parameters:
         - name: id
           in: path
@@ -211,6 +387,8 @@ paths:
     put:
       description: Update a review based on its id
       operationId: updateReview
+      tags:
+        - Reviews
       parameters:
         - name: id
           in: path
@@ -240,6 +418,8 @@ paths:
     get:
       description: Returns all the reviews of the given client id
       operationId: findReviewsByClientId
+      tags:
+        - Reviews
       parameters:
         - name: clientId
           in: path
@@ -265,6 +445,8 @@ paths:
     delete:
       description: Deletes all the reviews of the given client id
       operationId: deleteReviewsByClientId
+      tags:
+        - Reviews
       parameters:
         - name: clientId
           in: path
@@ -286,6 +468,8 @@ paths:
     get:
       description: Returns all the reviews of the given product id
       operationId: findReviewsByProductId
+      tags:
+        - Reviews
       parameters:
         - name: productId
           in: path
@@ -311,6 +495,8 @@ paths:
     delete:
       description: Deletes all the reviews of the given product id
       operationId: deleteReviewsByProductId
+      tags:
+        - Reviews
       parameters:
         - name: productId
           in: path
@@ -332,6 +518,8 @@ paths:
     get:
       description: Returns all the comments of the review with the given id
       operationId: findReviewCommentsById
+      tags:
+        - Reviews
       parameters:
         - name: id
           in: path
@@ -357,6 +545,8 @@ paths:
     post:
       description: Creates a new comment for the given review
       operationId: addCommentToReview
+      tags:
+        - Reviews
       parameters:
         - name: id
           in: path
@@ -386,6 +576,8 @@ paths:
     get:
       description: Returns the comment with the given id in the given review
       operationId: findReviewSingleComment
+      tags:
+        - Reviews
       parameters:
         - name: reviewId
           in: path
@@ -415,6 +607,8 @@ paths:
     delete:
       description: Deletes the given comment from the given review
       operationId: deleteCommentFromReview
+      tags:
+        - Reviews
       parameters:
         - name: reviewId
           in: path
@@ -440,6 +634,8 @@ paths:
     put:
       description: Updates the comment with the given id from the given review
       operationId: updateCommentFromReview
+      tags:
+        - Reviews
       parameters:
         - name: reviewId
           in: path
@@ -540,10 +736,10 @@ components:
         id:
           type: string
           minLength: 1
-        product:
+        productId:
           type: string
           minLength: 1
-        client:
+        clientId:
           type: string
           minLength: 1
         questionText:
@@ -563,13 +759,14 @@ components:
               clientId:
                 type: string
                 minLength: 1
+              body:
+                type: string
+                minLength: 1
+              date:
+                type: string
+                minLength: 1
       required:
-        - id
-        - product
-        - client
         - questionText
-        - dateCreated
-        - replies
     reviewResponse:
       type: object
       properties:
@@ -628,6 +825,18 @@ components:
         - description
         - comments
     comment:
+      type: object
+      properties:
+        clientId:
+          type: string
+          minLength: 1
+        body:
+          type: string
+          minLength: 1
+      required:
+        - clientId
+        - body
+    reply:
       type: object
       properties:
         clientId:
